--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/postcss": "^4.0.6",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.3.0",
@@ -50,6 +51,7 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
+		"@tailwindcss/vite": "^4.0.6",
 		"drizzle-orm": "^0.39.3",
 		"elea-di": "^1.0.9-charlie"
 	}
