--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,12 +9,12 @@
   "pages_build_output_dir": ".svelte-kit/cloudflare",
   "observability": {
     "enabled": true
-  }
+  },
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
    */
-  // "placement": { "mode": "smart" },
+  "placement": { "mode": "smart" },
 
   /**
    * Bindings
@@ -22,7 +22,19 @@
    * databases, object storage, AI inference, real-time communication and more.
    * https://developers.cloudflare.com/workers/runtime-apis/bindings/
    */
-
+   "r2_buckets": [
+    {
+      "binding": "R2",
+      "bucket_name": "<MY_BUCKET_NAME>"
+    }
+  ],
+  "d1_databases": [
+    {
+      "binding": "D1",
+      "database_name": "<MY_DATABASE_NAME>",
+      "database_id": "<MY_DATABASE_ID>"
+    }
+  ]
   /**
    * Environment Variables
    * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
