--- a/package.json
+++ b/package.json
@@ -1,71 +1,74 @@
 {
-	"name": "svelte-d1-shadcn-template",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "npm run build && wrangler pages dev",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "wrangler d1 migrations apply db_name --local",
-		"db:migrate-remote": "wrangler d1 migrations apply db_name --remote",
-		"db:migrate-live": "wrangler d1 migrations apply db_name --local",
-		"db:migrate-live-remote": "wrangler d1 migrations apply db_name --remote",
-		"db:push": "drizzle-kit push",
-		"db:studio": "drizzle-kit studio",
-		"deploy": "npm run build && wrangler pages deploy",
-		"cf-typegen": "wrangler types && move worker-configuration.d.ts src/"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250214.0",
-		"@faker-js/faker": "^9.5.0",
-		"@internationalized/date": "^3.7.0",
-		"@sveltejs/adapter-cloudflare": "^5.0.3",
-		"@sveltejs/kit": "^2.17.2",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/postcss": "^4.0.6",
-		"@tailwindcss/typography": "^0.5.16",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.3.0",
-		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.30.4",
-		"embla-carousel-svelte": "^8.5.2",
-		"formsnap": "^2.0.0",
-		"lucide-svelte": "^0.475.0",
-		"mode-watcher": "^0.5.1",
-		"paneforge": "^1.0.0-next.4",
-		"svelte": "^5.20.1",
-		"svelte-check": "^4.1.4",
-		"svelte-sonner": "^0.3.28",
-		"sveltekit-superforms": "^2.23.1",
-		"tailwind-merge": "^3.0.1",
-		"tailwind-variants": "^0.3.1",
-		"tailwindcss": "^4.0.6",
-		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.7.3",
-		"vaul-svelte": "^1.0.0-next.6",
-		"vite": "^6.1.0",
-		"wrangler": "^3.109.1",
-		"zod": "^3.24.2"
-	},
-	"dependencies": {
-		"@hono/swagger-ui": "^0.5.0",
-		"@hono/zod-validator": "^0.4.3",
-		"@tailwindcss/vite": "^4.0.6",
-		"@tanstack/table-core": "^8.21.2",
-		"bcryptjs": "^3.0.1",
-		"dayjs": "^1.11.13",
-		"dayjs-plugin-utc": "^0.1.2",
-		"dexie": "^4.0.11",
-		"drizzle-orm": "^0.39.3",
-		"elea-di": "^1.0.9-charlie",
-		"hono": "^4.7.1",
-		"nanoid": "^5.1.0"
-	}
+    "name": "svelte-d1-shadcn-template",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "npm run build && wrangler pages dev",
+        "prepare": "svelte-kit sync || echo ''",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "wrangler d1 migrations apply db_name --local",
+        "db:migrate-remote": "wrangler d1 migrations apply db_name --remote",
+        "db:migrate-live": "wrangler d1 migrations apply db_name --local",
+        "db:migrate-live-remote": "wrangler d1 migrations apply db_name --remote",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio",
+        "deploy": "npm run build && wrangler pages deploy",
+        "cf-typegen": "wrangler types && move worker-configuration.d.ts src/",
+        "update:deps": "npx npm-check-updates -u && npm install",
+        "update:ui": "npx shadcn-svelte@next update --all"
+    },
+    "devDependencies": {
+        "@cloudflare/workers-types": "^4.20250327.0",
+        "@faker-js/faker": "^9.6.0",
+        "@internationalized/date": "^3.7.0",
+        "@lucide/svelte": "^0.486.0",
+        "@sveltejs/adapter-cloudflare": "^6.0.1",
+        "@sveltejs/kit": "^2.20.2",
+        "@sveltejs/vite-plugin-svelte": "^5.0.3",
+        "@tailwindcss/container-queries": "^0.1.1",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/postcss": "^4.0.17",
+        "@tailwindcss/typography": "^0.5.16",
+        "autoprefixer": "^10.4.21",
+        "bits-ui": "^1.3.15",
+        "clsx": "^2.1.1",
+        "drizzle-kit": "^0.30.6",
+        "embla-carousel-svelte": "^8.5.2",
+        "formsnap": "^2.0.0",
+        "lucide-svelte": "^0.486.0",
+        "mode-watcher": "^0.5.1",
+        "paneforge": "^1.0.0-next.4",
+        "svelte": "^5.25.5",
+        "svelte-check": "^4.1.5",
+        "svelte-sonner": "^0.3.28",
+        "sveltekit-superforms": "^2.24.0",
+        "tailwind-merge": "^3.1.0",
+        "tailwind-variants": "^1.0.0",
+        "tailwindcss": "^4.0.17",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "^5.8.2",
+        "vaul-svelte": "^1.0.0-next.7",
+        "vite": "^6.2.4",
+        "wrangler": "^4.6.0",
+        "zod": "^3.24.2"
+    },
+    "dependencies": {
+        "@hono/swagger-ui": "^0.5.1",
+        "@hono/zod-validator": "^0.4.3",
+        "@tailwindcss/vite": "^4.0.17",
+        "@tanstack/table-core": "^8.21.2",
+        "bcryptjs": "^3.0.2",
+        "dayjs": "^1.11.13",
+        "dayjs-plugin-utc": "^0.1.2",
+        "dexie": "^4.0.11",
+        "drizzle-orm": "^0.41.0",
+        "elea-di": "^1.0.9-charlie",
+        "hono": "^4.7.5",
+        "nanoid": "^5.1.5"
+    }
 }
